# dithtorio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base64.h  blueprint.cpp  blueprint.h  clibdithtorio.pxd  compression.h  debug.h  dithering.cpp  dithering.h  dithtorio.cpp  dithtorio.h  libdithtorio.pyx  setup.py
dithtorio/: __init__.py  console_script.py
